Fixtures updated for tests

--- a/test/fixtures/invitations.yml
+++ b/test/fixtures/invitations.yml
@@ -4,4 +4,9 @@ one:
   list: one
   invitation_from: one
   invitation_to: three
+  message: "messageOne"
 
+two:
+  list: two
+  invitation_from: one
+  invitation_to: three
