--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -15,3 +15,11 @@ two:
 three:
   first_name: "three"
   email: "three@mail.com"
+
+four:
+  first_name: "four"
+  email: "four@mail.com"
+
+five:
+  first_name: "five"
+  email: "five@mail.com"
