--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,6 +53,6 @@ jobs:
           bundle exec rails db:create db:migrate
       - name: Run tests
         # run: bundle exec rails test
-        run: bundle exec rails test test/controllers/lists_controller_test.rb -v
+        run: bundle exec rails test test/controllers/pages_controller_test.rb
       # - name: Run system tests
       #   run: bundle exec rails test:system
