--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,16 +34,16 @@ jobs:
           # runs 'bundle install' and caches installed gems automatically
           bundler-cache: true
       - name: Set up Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: "16"
       - name: Get Yarn cache directory path
         id: yarn-cache
-        run: echo "name=dir=$(yarn cache dir)" >> $GITHUB_ENV
+        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
       - name: Setup cache key and directory for node_modules cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
+          path: ${{ output.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - name: Yarn install
         run: yarn install --frozen-lockfile
