--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,8 +51,10 @@ jobs:
         run: |
           cp config/database.github.yml config/database.yml
           bundle exec rails db:create db:migrate
-      # - name: Run tests
+      - name: Precompile assets
+        run: bundle exec rake assets:precompile RAILS_ENV=test
+      - name: Run tests
         # run: bundle exec rails test
-        # run: bundle exec rails test test/controllers/pages_controller_test.rb
+        run: bundle exec rails test test/controllers/pages_controller_test.rb
       - name: Run system tests
         run: bundle exec rails test:system
